# RubiksCubeSolver

./: .gitignore  CMakeLists.txt  cube.cpp  cube.h  cube1d.cpp  cube3d.cpp  fix.py  main.cpp
models/: cube.cpp  cube.h  cube1d.cpp  cube3d.cpp  cubeBitboard.cpp  cubeBitboard.h  tempCodeRunnerFile.cpp
patternDatabase/: CornerDB.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  PermutationIndexer.h  math.h  nibbleArray.cpp  nibbleArray.h  patternDatabase.cpp  patternDatabase.h
scanner/: CubeScanner.cpp  CubeScanner.h  main.cpp
solvers/: bfsolver.h  dfssolver.h  idastarsolver.h  iddfs.h
